@@ -6,6 +6,9 @@ major changes to the OpenSLP code base.  An entries should be separated by
 blank lines and include the date, developer's email, and change description.
 =============================================================================
 02/09/01 mpeterson@caldera.com
+Removed old MSVC project files and made new ones in the win32 directory
+
+02/09/01 mpeterson@caldera.com
 Numerous changes to make it so libsmb will build on Windows without cgywin. 
 (Had to beautify source after mangling it with Windows editors, etc)
 
